--- a/client/styles/gallery.css
+++ b/client/styles/gallery.css
@@ -89,10 +89,13 @@
     border: 1px solid hsl(0 0% 0% / 0.15);
     border-radius: 6px;
     margin: 4px 6px;
-    display: inline-flex;
-    align-items: center;
     color: rgba(0,0,0,.72);
     font-size: 13px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-right: 15px;
+    display: inline-block;
+    line-height: 48px;
 }
 
 .files a:before {
@@ -101,6 +104,11 @@
     font-size: 18px;
     color: #5f6368;
     padding: 0 16px;
+    vertical-align: middle;
+}
+
+.files a[data-type="gallery"]:before {
+    content: 'folder';
 }
 
 .top-nav > * {
