--- a/server/templates/gallery.html
+++ b/server/templates/gallery.html
@@ -11,8 +11,8 @@
 <link href="/client/fonts/open-sans/open-sans.css" rel="stylesheet">
 <link href="/client/fonts/ubuntu/ubuntu.css" rel="stylesheet">
 <link href="/client/fonts/material-icons/material-icons.css" rel="stylesheet">
-<script src="/client/scripts/turbolinks.js"></script><!-- 
-<script type="module" src="/client/scripts/gallery.js"></script> -->
+<script defer src="/client/scripts/turbolinks.js"></script>
+<script defer type="module" src="/client/scripts/gallery.js"></script>
 
 <header class="top-nav">
 	<a class="icon back" href="..">arrow_back</a>
@@ -50,16 +50,9 @@
 					page.url == static_file.path or
 					ignored contains static_file.path or 
 					urlPrefix2 == '/client/' or
-					urlPrefix2 == '/server/' %}{%
-				assign dotIndex = static_file.name | size | minus: 4 %}{%
-				assign fourthCharFromRight = static_file.name | slice: dotIndex, 1 %}{%
-				if fourthCharFromRight == '.' %}{%
-				assign filenameWithoutExtension = static_file.name | slice: 0, dotIndex | replace: "-", " " | replace: "_", " "
-					%}		<a href="{{ static_file.path }}">{{ filenameWithoutExtension }}</a>
-{%				else
-					%}		<a href="{{ static_file.path }}">{{ static_file.name | replace: "-", " " | replace: "_", " " }}</a>
-{%				endif %}{%
-			endunless %}{%
+					urlPrefix2 == '/server/'
+				%}		<a href="{{ static_file.path }}">{{ static_file.basename | replace: "-", " " | replace: "_", " " }}</a>
+{%			endunless %}{%
 		endfor
 	%}</section>
 	
