--- a/client/styles/gallery.css
+++ b/client/styles/gallery.css
@@ -1,3 +1,7 @@
+body {
+    text-size-adjust: none;
+}
+
 .top-nav {
     height: 64px;
     position: fixed;
@@ -11,6 +15,7 @@
     /* justify-content: space-between; */
     align-items: center;
     z-index: 100;
+    pointer-events: none;
 }
 
 .top-nav > * {
@@ -79,7 +84,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    right: 14px;
+    right: 0;
     pointer-events: none;
     touch-action: none;
     z-index: -1;
@@ -120,9 +125,10 @@
 }
 
 .top-nav > * {
-    background: hsl(0deg 0% 100% / 80%);
-    box-shadow: 0 0 20px white, 0 0 20px white, 0 0 20px white;
+    background: hsl(0deg 0% 100% / 70%);
+    box-shadow: 0 0 10px white, 0 0 10px white;
     text-shadow: 0 0 20px white, 0 0 20px white;
+    pointer-events: all;
 }
 
 
@@ -161,4 +167,33 @@
         width: 200px;
         margin: 0;
     }
+}
+
+::-webkit-scrollbar {
+    width: 18px;
+    height: 18px;
+}
+
+::-webkit-scrollbar-button {
+    display: none;
+}
+
+::-webkit-scrollbar-thumb {
+    border: 6px solid transparent;
+    background-color: hsl(0 0% 50% / 0.5);
+    border-radius: 30px;
+    background-clip: content-box;
+    transition: background-color 0.3s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(0 0% 50% / 0.7);
+}
+
+::-webkit-scrollbar-thumb:active {
+    background-color: hsl(0 0% 50% / 0.9);
+}
+
+::-webkit-scrollbar-corner {
+    background-color: transparent;
 }
