--- a/server/templates/gallery.html
+++ b/server/templates/gallery.html
@@ -19,7 +19,7 @@
 	<h1 class="site-title">{{ site.title }}</h1>
 </header>
 <article class="content">
-	<h1 class="title">{{ page.title }}</h1>
+	<h1 class="title">{{ page.title | default: site.title }}</h1>
 
 	<section class="files">{%
 		assign ignored = '/404.html,/,/feed.xml,/sitemap.xml,/robots.txt,/CNAME,/assets/css/style.css' %}{%
